--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.Bisha.TI89EmuDonation"
-        minSdkVersion 8
+        minSdkVersion 19
         targetSdkVersion 29
-        versionCode 1133
-        versionName "1.1.3c"
+        versionCode 1141
+        versionName "1.1.4a"
         ndk {
             // TODO: Fix 64-bit ABIs
             //abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
-            abiFilters 'armeabi-v7a', 'x86'
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86'
         }
     }
     buildTypes {
@@ -25,6 +25,7 @@ android {
             path "src/main/jni/Android.mk"
         }
     }
+    namespace 'com.Bisha.TI89EmuDonation'
 }
 
 dependencies {
