--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 34
     defaultConfig {
         applicationId "com.Bisha.TI89EmuDonation"
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 34
         versionCode 1141
         versionName "1.1.4a"
         ndk {
             // TODO: Fix 64-bit ABIs
-            //abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
-            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86'
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         }
     }
     buildTypes {
@@ -19,6 +18,10 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        disable "Instantiatable"
+        disable "NamespaceTypo"
     }
     externalNativeBuild {
         ndkBuild {
